// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerAction should render a disabled button 1`] = `
<button
  className="theme-action"
  disabled={true}
  type="button"
>
  <span
    className="theme-text"
  >
    whatever
  </span>
</button>
`;

exports[`PickerAction should render a simple button 1`] = `
<button
  className="theme-action"
  type="button"
>
  <span
    className="theme-text"
  >
    whatever
  </span>
</button>
`;
